- `defhandler` does not create a new var named after the command (with a '-handler' suffix) anymore
- `defkeybinding` correctly interprets the :context key
- `defkeybinding` a bad :context value could break binding tables. This is fixed, an error is reported on stdout and the :window context is used as a default

=== REPLs
- Everytime a response is received from an nrepl connection, the response data is posted to the Eclipse 4 Event Broker to the "ccw/repl/response" topic (just use :ccw.repl.response in your user plugins to refer to the topic, the conversion from :ccw.repl.reponse to "ccw/repl/response" is done by `ccw.events` functions).

== Changes between Counterclockwise 0.29.1 and 0.30.0

`0.30.0` released on November 16, 2014

This release fixes bug in the 0.29.1 release.

It has not been labelled 0.29.2 because one fix involved a new way of building the CCW/Standalone Product.

=== Fix

- There were `java.lang.ExceptionInInitializerError` caused by: org.eclipse.swt.SWTException: Invalid thread access errors at Eclipse startup, caused by (import) calls in Clojure loading JDT classes static initializers too early.
    This has been fixed by changing the way Preferences are fetched from the JDT.
- Race conditions between the Automatic Clojure Nature adder and m2e initializing its classpath containers.

=== CCW/Standalone Product
- The CCW/Standalone Product is built differently than before. Hopefully for the better. I've followed the way e.g. the voclipse IDE by Vogella is built.
- Fixed some lifecycle exceptions when Eclipse is closed. Not really problematic, but was filling the logs.
- Added CCW / Luna Release / Luna Updates / Eclipse Color Themes repositories to Software Update Sites list
- Changed the default proposal for the workspace: instead of locating it inside the Eclipse folder, suggest `$user.home/ccw-settings`

=== Leiningen