@@ -35,6 +35,9 @@ Laurent Petit <laurent dot petit at gmail dot com>
 - `defkeybinding` correctly interprets the :context key
 - `defkeybinding` a bad :context value could break binding tables. This is fixed, an error is reported on stdout and the :window context is used as a default
 
+=== Editors
+Everytime a Clojure editor is saved, a map with the namespace String, the absolute file path and the active REPL if there is one is posted to the Eclipse 4 Event Broker to the "ccw/editor/saved" topic (just use :ccw.editor.saved in your user plugins to refer to the topic, the conversion is automatic).
+
 === REPLs
 - Everytime a response is received from an nrepl connection, the response data is posted to the Eclipse 4 Event Broker to the "ccw/repl/response" topic (just use :ccw.repl.response in your user plugins to refer to the topic, the conversion from :ccw.repl.reponse to "ccw/repl/response" is done by `ccw.events` functions).
 
